add Dockerfile, docker-compose.yml

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# copy this file to '.env', then edit configurations.
+# copy this file to '.env.production', then edit configurations.
 
 DB_DIALECT=postgres
 DB_HOST=172.17.0.1
@@ -8,6 +8,6 @@ DB_USER=fcm_sender
 DB_PASS=XXXXXXXXXXXXXXXXX
 
 LISTEN_PORT=4005
-LISTEN_ADDR=172.17.0.1
+LISTEN_ADDR=0.0.0.0
 
 FCM_SERVER_KEY=XXXXXXXXXXXXXXXXXXXXXXXXX
