JWT signature verification

--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-    "name": "push-to-fcm",
-    "version": "0.0.1",
-    "description": "WebPush-FCM proxy for mobile app",
-    "main": "index.js",
-    "scripts": {
-	"start": "node index.js"
-    },
-    "author": "tateisu",
-    "license": "AGPL-3.0-or-later",
-    "repository" : {
-	"type" : "git",
-	"url" : "https://github.com/tateisu/PushToFCM.git"
-    },
-    "dependencies": {
-	"axios": "^0.18.0",
-	"dotenv": "^5.0.1",
-	"koa": "^2.5.1",
-	"koa-body": "^2.5.0",
-	"npmlog": "^4.1.2",
-	"pg": "^7.4.3",
-	"raw-body": "^2.3.3",
-	"sequelize": "^4.37.7",
-	"urlsafe-base64": "^1.0.0"
-    }
+   "name": "push-to-fcm",
+   "version": "0.0.1",
+   "description": "WebPush-FCM proxy for mobile app",
+   "main": "index.js",
+   "scripts": {
+      "start": "node -r dotenv/config index.js dotenv_config_path=.env.production"
+   },
+   "author": "tateisu",
+   "license": "AGPL-3.0-or-later",
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/tateisu/PushToFCM.git"
+   },
+   "dependencies": {
+      "asn1.js": "^4.10.1",
+      "axios": "^0.18.0",
+      "dotenv": "^5.0.1",
+      "jsonwebtoken": "^8.2.1",
+      "koa": "^2.5.1",
+      "koa-body": "^2.5.0",
+      "npmlog": "^4.1.2",
+      "pg": "^7.4.3",
+      "raw-body": "^2.3.3",
+      "sequelize": "^4.37.7",
+      "urlsafe-base64": "^1.0.0"
+   }
 }
